--- a/themes/1997/static/styles/1997.css
+++ b/themes/1997/static/styles/1997.css
@@ -78,6 +78,7 @@ body {
 
 @media (max-width: 745px) {
 	body:not(.home) .page-wrapper {
+		min-height: 100vh;
 		margin: 0;
 		border: none;
 	}
